css/main.css
/*! HTML5 Boilerplate v7.2.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/*------General  Styles--------*/
  html {
    font-size: 16px;
  }

  body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  font-size: 1em;
  }
   
  ul, 
  ol {
    list-style-type: none;
    font-size: 1.125em;
    margin: 0;
   
  }
   
  a {
    color: #e2e3ed;
    text-decoration: none;
  }
   
  h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   color: #e2e3ed;
   font-weight: 500;
    margin-top: 0;
  }
   
  h3, 
  h4 {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   line-height: 1.125em;
   font-size: 1.125em;
   color: #e2e3ed;
  }

  footer h4 {
    margin: 0 15px;
  }
   
  p {
    font-size: 0.875em;
    font-weight: normal;
    color: #e2e3ed;
  }
   
  img {
   width: 100%;
  }
   
  figure {
   margin: 0;
  }
   
  address {
   font-style: normal; 
  }
   
/*------Base Styles--------*/

   .content-wrapper {
    width: 90%;
    margin: 50px 0;
   }

/*-------------------Base Header - Footer Styles----------------*/

header, footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #202322
}

header {
  padding: 15px 0;

}
header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;

}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.header-divider {
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;
  background-color: #3a3a3a;

}

header nav {  
  width: 60%; 
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: row wrap;
}

header nav ul {
  width: 100%;
  padding: 0;
  display: flex;
  justify-content: space-around;
}

nav ul li {
  list-style-type: none;
}

footer p {
  margin: 0;
}

 footer {
  flex-direction: column;
} 

footer .contact, footer .social  {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
}

footer h4 {
  margin-bottom: 18px;
}

footer .social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 200px;
}

footer .social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
}

footer .social-icons i {
  color: #527158;
  font-size: 2.5em;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

footer .contact {
  margin-bottom: 50px;
}


footer .copyright {
margin: 0 0 20px 0;

}
/* ==========================================================================
   Mobile Styles - Homepage
   ========================================================================== */
.hero-area {
  background: url("../img/hero-image.jpg") bottom no-repeat #253229;
  background-size: cover;
  height: 500px;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-flow: row wrap;
}

.hero-area h1 {
  padding: 0;
  font-size: 2.25em;
  color: #e2e3ed;
  font-weight: 500;
  font-family: 'Poppins', sans-serif;
  margin: 0;
  }

.hero-area {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

aside {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #527158;
}

aside .content-wrapper {
  margin-top: 25px;
}

/*---------Input form Area--------*/

aside .form {
  margin-top: 30px;
}
 
input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-size: 0.875em;
  font-style: italic;
  color: #a2a3a9;
  padding: 18px 0;
  margin-top: 18px;
}
 
input[type=button] {
  width: 100%;
  padding: 16px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}
/* ... */

